--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redux": "^4.2.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
