--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.0.0",
     "react": "^18.2.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
-    "redux": "^4.2.0",
+    "react-redux": "^8.0.4",
     "sass": "^1.55.0"
   },
   "devDependencies": {
